Update: API documentations (swagger).
